<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/user_menu"
        android:title="user"
        android:icon="@drawable/ic_person"
        app:showAsAction="always">

        <menu>
            <item android:id="@+id/name_user"
                android:title="@string/name_in_menu"
                android:icon="@drawable/ic_person"
                app:showAsAction="ifRoom"/>

            <item android:id="@+id/app_language"
                android:title="@string/languange_in_menu"
                android:icon="@drawable/ic_language"
                app:showAsAction="ifRoom"/>

            <item android:id="@+id/user_logout"
                android:title="@string/logout_in_menu"
                android:icon="@drawable/ic_logout"
                app:showAsAction="ifRoom"/>
        </menu>

    </item>

</menu>