<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.example.storyapp.ui.customeview.editview.CustomEditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/background_edit_text"
        android:inputType="text"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_email"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <com.example.storyapp.ui.customeview.editview.CustomEditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/background_edit_text"
        android:inputType="textPassword"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:hint="@string/hint_password"
        android:drawableStart="@drawable/ic_key"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/login"
        android:layout_marginStart="250dp"
        android:layout_marginTop="30dp"/>

</LinearLayout>